[gd_scene load_steps=4 format=2]

[ext_resource path="res://interface/botao restart/fundo.png" type="Texture" id=1]
[ext_resource path="res://interface/bot√£o jogar/jogar completo.png" type="Texture" id=2]
[ext_resource path="res://Scripts/GameMannager.gd" type="Script" id=3]

[node name="GerenteGame" type="Node2D"]
script = ExtResource( 3 )

[node name="BackGround" type="Sprite" parent="."]
position = Vector2( 515, 304.5 )
scale = Vector2( 1028, 599 )
texture = ExtResource( 1 )

[node name="Play" type="TextureButton" parent="."]
margin_left = 371.0
margin_top = 68.0
margin_right = 793.0
margin_bottom = 298.0
rect_scale = Vector2( 0.75, 0.75 )
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 2 )

[node name="Quit" type="TextureButton" parent="."]
margin_left = 378.0
margin_top = 327.0
margin_right = 800.0
margin_bottom = 557.0
rect_scale = Vector2( 0.75, 0.75 )
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 2 )

[connection signal="pressed" from="Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
