[gd_scene load_steps=4 format=2]

[ext_resource path="res://interface/botao restart/fundo.png" type="Texture" id=1]
[ext_resource path="res://interface/setinha/direita.png" type="Texture" id=2]
[ext_resource path="res://Scripts/GameMannager.gd" type="Script" id=3]

[node name="SelecaoFases" type="Node2D"]
script = ExtResource( 3 )

[node name="Fundo" type="Sprite" parent="."]
position = Vector2( 516, 303.5 )
scale = Vector2( 3.8411, 3.43913 )
texture = ExtResource( 1 )

[node name="ProximaPagina" type="TextureButton" parent="."]
margin_left = 911.0
margin_top = 490.0
margin_right = 1138.0
margin_bottom = 702.0
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 2 )

[node name="Fase1" type="TextureButton" parent="."]
margin_right = 227.0
margin_bottom = 212.0
texture_normal = ExtResource( 2 )

[node name="Fase2" type="TextureButton" parent="."]
margin_left = 397.0
margin_right = 624.0
margin_bottom = 212.0
texture_normal = ExtResource( 2 )

[node name="Fase3" type="TextureButton" parent="."]
margin_left = 794.0
margin_top = 4.0
margin_right = 1021.0
margin_bottom = 216.0
texture_normal = ExtResource( 2 )

[connection signal="pressed" from="ProximaPagina" to="." method="_on_ProximaPagina_pressed"]
