[gd_scene load_steps=5 format=2]

[ext_resource path="res://interface/botao restart/fundo.png" type="Texture" id=1]
[ext_resource path="res://interface/setinha/direita.png" type="Texture" id=2]
[ext_resource path="res://interface/setinha/setinha.png" type="Texture" id=3]
[ext_resource path="res://Scripts/GameMannager.gd" type="Script" id=4]

[node name="SelecaoFases" type="Node2D"]
script = ExtResource( 4 )

[node name="Fundo" type="Sprite" parent="."]
position = Vector2( 516, 303.5 )
scale = Vector2( 3.8411, 3.43913 )
texture = ExtResource( 1 )

[node name="ProximaPagina2" type="TextureButton" parent="."]
margin_left = 908.0
margin_top = 488.0
margin_right = 1135.0
margin_bottom = 700.0
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 2 )

[node name="PaginaAnterior" type="TextureButton" parent="."]
margin_left = 3.0
margin_top = 489.0
margin_right = 230.0
margin_bottom = 701.0
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 3 )

[node name="Fase1" type="TextureButton" parent="."]
margin_right = 227.0
margin_bottom = 212.0
texture_normal = ExtResource( 2 )

[node name="Fase2" type="TextureButton" parent="."]
margin_left = 392.0
margin_top = 1.0
margin_right = 619.0
margin_bottom = 213.0
texture_normal = ExtResource( 2 )

[node name="Fase3" type="TextureButton" parent="."]
margin_left = 794.0
margin_top = 6.0
margin_right = 1021.0
margin_bottom = 218.0
texture_normal = ExtResource( 2 )

[connection signal="pressed" from="ProximaPagina2" to="." method="_on_ProximaPagina2_pressed"]
[connection signal="pressed" from="PaginaAnterior" to="." method="_on_PaginaAnterior_pressed"]
