[gd_scene load_steps=5 format=2]

[ext_resource path="res://interface/botao restart/fundo.png" type="Texture" id=1]
[ext_resource path="res://interface/setinha/direita.png" type="Texture" id=2]
[ext_resource path="res://Scripts/GameMannager.gd" type="Script" id=3]
[ext_resource path="res://interface/setinha/setinha.png" type="Texture" id=4]

[node name="SelecaoFases" type="Node2D"]
script = ExtResource( 3 )

[node name="Fundo" type="Sprite" parent="."]
position = Vector2( 516, 303.5 )
scale = Vector2( 3.8411, 3.43913 )
texture = ExtResource( 1 )

[node name="PaginaAnterior2" type="TextureButton" parent="."]
margin_left = 4.0
margin_top = 493.0
margin_right = 231.0
margin_bottom = 705.0
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 4 )

[node name="Fase1" type="TextureButton" parent="."]
margin_right = 227.0
margin_bottom = 212.0
texture_normal = ExtResource( 2 )

[node name="Fase2" type="TextureButton" parent="."]
margin_left = 392.0
margin_top = 2.0
margin_right = 619.0
margin_bottom = 214.0
texture_normal = ExtResource( 2 )

[node name="Fase3" type="TextureButton" parent="."]
margin_left = 797.0
margin_top = -2.0
margin_right = 1024.0
margin_bottom = 210.0
texture_normal = ExtResource( 2 )

[connection signal="pressed" from="PaginaAnterior2" to="." method="_on_PaginaAnterior2_pressed"]
